# Cursor-DataCloud-Connector

Non-MiddleWare/: .gitignore  LICENSE  QUICK_START.md  README.md  env.example  pyproject.toml
Non-MiddleWare/docs/: DEVELOPMENT.md  SETUP_GUIDE.md  SYSTEM_PROMPT.md  USAGE_EXAMPLES.md
Non-MiddleWare/scripts/: setup.sh  test_connection.py
Non-MiddleWare/src/salesforce_mcp/: __init__.py  auth.py  server.py
With-Middleware/: README.md
With-Middleware/docs/: api-reference.md  architecture.md  setup.md
With-Middleware/extension/: package.json
With-Middleware/extension/src/: extension.ts
With-Middleware/extension/src/webview/: webview.css  webview.ts
With-Middleware/middleware/: requirements.txt
With-Middleware/middleware/config/: example.env
With-Middleware/middleware/src/: main.py
With-Middleware/middleware/src/api/: routes.py
With-Middleware/middleware/src/auth/: jwt.py  oauth.py
With-Middleware/middleware/src/config/: settings.py
With-Middleware/middleware/src/mcp/: server.py
With-Middleware/middleware/src/models/: requests.py  responses.py
With-Middleware/middleware/src/services/: data_service.py
With-Middleware/middleware/src/utils/: logging.py
With-Middleware/middleware/tests/: test_auth.py
